syntax = "proto3";

package penumbra.core.component.block.v1;

import "google/protobuf/timestamp.proto";

// The Block service definition
service BlockService {
  // GetLatestBlock returns the latest block
  rpc GetLatestBlock(GetLatestBlockRequest) returns (GetLatestBlockResponse);
  // GetBlockByHeight returns a block at a specific height
  rpc GetBlockByHeight(GetBlockByHeightRequest) returns (GetBlockByHeightResponse);
}

message GetLatestBlockRequest {}

message GetLatestBlockResponse {
  Block block = 1;
}

message GetBlockByHeightRequest {
  uint64 height = 1;
}

message GetBlockByHeightResponse {
  Block block = 1;
}

message Block {
  uint64 height = 1;
  bytes hash = 2;
  google.protobuf.Timestamp timestamp = 3;
  repeated Transaction transactions = 4;
}

message Transaction {
  bytes hash = 1;
  bytes data = 2;
}